--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -7,10 +7,22 @@ a {
     text-align:center;
 }
 
+.headers {
+    border-bottom: 2px solid #edeff0;
+}
+
+.interaction {
+    border-bottom: 2px solid #edeff0;
+}
+
+.billInput, .amountInput {
+    margin-top: 1.7em;
+}
+
 .actions {
     display: inline-block;
     text-align: right;
-    margin: 2.9em 0.5em 0;
+    margin: 0 0.5em 0;
     padding: 1.75em 0;
 }
 
