--- a/src/public/templates/bills.html
+++ b/src/public/templates/bills.html
@@ -15,21 +15,21 @@
             </div>
         </div>
         
-        <div ng-repeat="bill in bills | orderBy : 'payed'" ng-init="bill.payed = false"  class="interaction row" ng-class="{ 'payed': bill.payed }">
+        <div ng-repeat="bill in bills | orderBy : 'payed'" ng-init="bill.payed = false" class="interaction row" ng-class="{ 'payed': bill.payed }">
             <div class="billInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                <label ng-hide="editing" class="bill">{{bill.name}}</label>
-                <input ng-show="editing" ng-model="bill.name" ng-blur="stopEditing()" class="bill" type="text"/>
+                <label ng-hide="editName" ng-click="editName = true" class="bill">{{bill.name}}</label>
+                <input ng-show="editName" ng-model="bill.name" ng-blur="editName = false" class="bill" type="text"/>
             </div>
             <div class="amountInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                <label ng-hide="editing" class="amount">$ {{bill.amount}}</label>
-                <input ng-show="editing" ng-model="bill.amount" class="amount" type="text"/>
+                <label ng-hide="editAmount" ng-click="editAmount = true" class="amount">$ {{bill.amount}}</label>
+                <input ng-show="editAmount" ng-model="bill.amount" ng-blur="editAmount = false" class="amount" type="text"/>
             </div>
             <div class="dueInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                    <label ng-hide="editing" class="due">{{bill.due}}</label>
-                    <input ng-show="editing" ng-model="bill.due" class="due" type="text"/>
+                    <label ng-hide="editDue" ng-click="editDue = true"  class="due">{{bill.due}}</label>
+                    <input ng-show="editDue" ng-model="bill.due" ng-blur="editDue = false" class="due" type="text"/>
                 </div>
             <div class="actions">                    
-                <a href="" ng-click="editing = !editing">Edit</a>
+                <a href="" ng-click="saveBill(bill)">Save</a>
                 <a href="" ng-click="bill.payed = !bill.payed" ng-class="{ 'payed': bill.payed }">Pay</a>
                 <a href="" ng-click="deleteBill(bill, $index)">Delete</a>
             </div>
