--- a/src/public/templates/bills.html
+++ b/src/public/templates/bills.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         
-        <div ng-repeat="bill in bills | orderBy : 'payed'" ng-init="bill.payed = false" class="interaction row" ng-class="{ 'payed': bill.payed }">
+        <div ng-class="{ 'payed': bill.payed }" ng-repeat="bill in bills" ng-init="bill.payed = false" class="interaction row">
             <div class="billInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
                 <label ng-hide="editName" ng-click="editName = true" class="bill">{{bill.name}}</label>
                 <input ng-show="editName" ng-model="bill.name" ng-blur="editName = false" class="bill" type="text"/>
@@ -34,4 +34,5 @@
                 <a href="" ng-click="deleteBill(bill, $index)">Delete</a>
             </div>
         </div>
+            {{bills}}
     </div>
