--- a/src/public/templates/bills.html
+++ b/src/public/templates/bills.html
@@ -1,6 +1,6 @@
 <div class="container">
-        <div ng-click="addNewBill()" class="new-bill">
-            <a href="">+ Add a New Bill</a>
+        <div ng-click="addNewBill()" class="new-bill row">
+            <button class="btn btn-primary col-xs-12 col-sm-3 col-md-2 col-lg-2 pull-right new-bill-btn" type="button" href="">+ Add New Bill</button>
         </div>
         <div class="headers row">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3">
