--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -69,6 +69,10 @@ a {
         margin: 0 2em;
     }
 
+    .new-bill-btn {
+        margin-right: -0.75em;
+    }
+
     .actions {
         margin: 0 0.5em;
     }
