Add Save All button. Edit save functionality and enable save all functionality on front end

--- a/public/templates/bills.html
+++ b/public/templates/bills.html
@@ -15,17 +15,17 @@
             </div>
         </div>
         
-        <div ng-class="{ 'payed': bill.payed }" ng-repeat="bill in bills" ng-init="bill.payed = false" class="interaction row">
+        <div ng-class="{ 'edited': bill.edited, 'payed': bill.payed }" ng-repeat="bill in bills" ng-init="bill.payed = false" class="interaction row">
             <div class="billInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                <label ng-hide="editName" ng-click="editName = true" class="bill">{{bill.name}}</label>
+                <label ng-hide="editName" ng-click="editName = true; bill.edited = true" class="bill">{{bill.name}}</label>
                 <input ng-show="editName" ng-model="bill.name" ng-blur="editName = false" class="bill" type="text"/>
             </div>
             <div class="amountInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                <label ng-hide="editAmount" ng-click="editAmount = true" class="amount">{{bill.amount | currency}}</label>
+                <label ng-hide="editAmount" ng-click="editAmount = true; bill.edited = true" class="amount">{{bill.amount | currency}}</label>
                 <input ng-show="editAmount" ng-model="bill.amount" ng-blur="editAmount = false" class="amount" type="text"/>
             </div>
             <div class="dueInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                    <label ng-hide="editDue" ng-click="editDue = true"  class="due">{{bill.due | date : mediumDate}}</label>
+                    <label ng-hide="editDue" ng-click="editDue = true; bill.edited = true"  class="due">{{bill.due | date : mediumDate}}</label>
                     <input ng-show="editDue" ng-model="bill.due" ng-blur="editDue = false" class="due" type="text"/>
                 </div>
             <div class="actions">                    
@@ -34,5 +34,6 @@
                 <a href="" ng-click="deleteBill(bill, $index)">Delete</a>
             </div>
         </div>
+        <button class="btn btn-primary" type="button" href="" ng-click="saveAllBills(bill)">Save All</button>
         {{bills}}
     </div>
