--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -15,7 +15,7 @@
             <h1>Sign Up</h1>
             <form method="POST" action="/register">
                 <div class="form-group">
-                  <label for="name">Usermame:</label>
+                  <label for="name">Username:</label>
                   <input class="form-control" id="username" type="text" name="username"/>
                 </div>
                 <div class="form-group">
