--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -4,32 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Bill Tracker: Register</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="container">
-    <div class="row">
+<body  ng-app="billTrackerApp" class="container">
+    <div ng-controller="MainCtlr" class="row">
         <div class="col-md-6 col-md-offset-3">
             <h1>Sign Up</h1>
             <form method="POST" action="/register">
                 <div class="form-group">
-                  <label for="name">Username:</label>
-                  <input class="form-control" id="username" type="text" name="username"/>
+                  <label for="username">Username:</label>
+                  <input ng-model="username" class="form-control" id="username" type="text" name="username" required/>
                 </div>
                 <div class="form-group">
                   <label for="pw">Password:</label>
-                  <input class="form-control" id="pw" type="password" name="password"/>
+                  <input ng-model="password" class="form-control" id="pw" type="password" name="password" required/>
                 </div>
                 <div class="form-group">
                   <label for="pw2">Confirm Password:</label>
-                  <input class="form-control" id="pw2" type="password" name="confirmPassword"/>
+                  <input ng-model="confirmPassword" class="form-control" id="pw2" type="password" name="confirmPassword" required/>
                 </div>
                 <button class="btn btn-primary" type="submit">Sign up</button>
-              </form>
+            </form>
         </div>
     </div>  
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/controllers/main.js" type="text/javascript"></script>
+    <script src="scripts/services/data.js" type="text/javascript"></script>
 </body>
 </html>
