--- a/public/templates/navbar.html
+++ b/public/templates/navbar.html
@@ -5,7 +5,7 @@
     </div>
     <div class="nav-btn-group navbar-right">
         <button type="button" ng-click="getRegister()" class="btn btn-default navbar-btn"><p class="navbar-text">Register</p></button>
-        <button type="button" class="btn btn-default navbar-btn"><p class="navbar-text">Login</p></button>
+        <button type="button" ng-click="getLogin()" class="btn btn-default navbar-btn"><p class="navbar-text">Login</p></button>
     </div>
   </div>
 </nav>
