--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bill Tracker: Login</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body ng-app="billTrackerApp" class="container">
-  <div ng-controller="MainCtlr" class="row">
+<div class="container">
+  <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1 class="display-4 m-b-2">Log In</h1>
       <form method="POST" action="/login">
@@ -26,9 +15,4 @@
       </form>
     </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-  <script src="scripts/app.js" type="text/javascript"></script>
-  <script src="scripts/controllers/main.js" type="text/javascript"></script>
-  <script src="scripts/services/data.js" type="text/javascript"></script>
-</body>
-</html>
+</div>
