--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -11,6 +11,7 @@
 </head>
 <body ng-app="billTrackerApp" class="container">
     <div ng-controller="MainCtlr" class="row">
+        <nav class="navbar"><div ng-include src="'templates/navbar.html'"></nav>                
         <div class="col-md-6 col-md-offset-3">
             <h1>Sign Up</h1>
             <form method="POST" action="/register">
@@ -27,6 +28,7 @@
                   <input ng-model="confirmPassword" class="form-control" id="pw2" type="password" name="confirmPassword" required/>
                 </div>
                 <button class="btn btn-primary" type="submit">Sign up</button>
+                <button ng-click="home()" class="btn btn-primary" type="button">Login</button>                
             </form>
         </div>
     </div>  
