--- a/public/templates/bills.html
+++ b/public/templates/bills.html
@@ -26,9 +26,13 @@
                 <input ng-show="editAmount" ng-model="bill.amount" ng-blur="editAmount = false" class="amount" type="text"/>
             </div>
             <div class="dueInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                    <label ng-hide="editDue" ng-click="editDue=true; bill.edited=true; bill.dueColor=true" ng-class="{'editColor': bill.dueColor}" class="due"><span class="show-768px">{{bill.due | date: 'MM/dd/yy'}}</span><span class="hide-768px">{{bill.due | date}}</span></label>
-                    <input ng-show="editDue" ng-model="bill.due" ng-blur="editDue = false" class="due" type="text"/>
-                </div>
+                    <label ng-hide="editDue" ng-click="editDue=true; bill.edited=true; bill.dueColor=true" ng-class="{'editColor': bill.dueColor}" class="due"><span class="show-768px">{{bill.due | date: 'MM/dd/yy'}}</span><span class="hide-768px">{{bill.due | date: 'mediumDate'}}</span></label>
+                    <datepicker>
+                        <div class="input-group">
+                            <input ng-show="editDue" ng-model="bill.due; date" ng-blur="editDue = false" class="due" type="text"/>
+                        </div>
+                    </datepicker>
+            </div>           
             <div class="actions">                    
                 <a href="" ng-click="saveBill(bill); bill.nameColor=false; bill.amountColor=false; bill.dueColor=false">Save</a>
                 <a href="" ng-click="bill.payed = !bill.payed" ng-class="{ 'payed': bill.payed }">Pay</a>
