--- a/public/templates/bills.html
+++ b/public/templates/bills.html
@@ -18,26 +18,25 @@
         
         <div ng-class="{ 'edited': bill.edited, 'payed': bill.payed }" ng-repeat="bill in bills" ng-init="bill.payed = false" class="interaction row">
             <div class="billInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                <label ng-hide="editName" ng-click="editName=true; bill.edited=true; bill.nameColor=true" ng-class="{'editColor': bill.nameColor}" class="bill">{{bill.name}}</label>
+                <label ng-hide="editName" ng-click="editName=!bill.payed; bill.edited=!bill.payed; bill.nameColor=!bill.payed" ng-class="{'editColor': bill.nameColor}" class="bill">{{bill.name}}</label>
                 <input ng-show="editName" ng-model="bill.name" ng-blur="editName = false" class="bill" type="text"/>
             </div>
             <div class="amountInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                <label ng-hide="editAmount" ng-click="editAmount=true; bill.edited=true; bill.amountColor=true" ng-class="{'editColor': bill.amountColor}" class="amount">{{bill.amount | currency}}</label>
+                <label ng-hide="editAmount" ng-click="editAmount=!bill.payed; bill.edited=!bill.payed; bill.amountColor=!bill.payed" ng-class="{'editColor': bill.amountColor}" class="amount">{{bill.amount | currency}}</label>
                 <input ng-show="editAmount" ng-model="bill.amount" ng-blur="editAmount = false" class="amount" type="text"/>
             </div>
             <div class="dueInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                    <label ng-hide="editDue" ng-click="editDue=true; bill.edited=true; bill.dueColor=true" ng-class="{'editColor': bill.dueColor}" class="due"><span class="show-768px">{{bill.due | date: 'MM/dd/yy'}}</span><span class="hide-768px">{{bill.due | date: 'mediumDate'}}</span></label>
+                    <label ng-hide="editDue" ng-click="editDue=!bill.payed; bill.edited=!bill.payed; bill.dueColor=!bill.payed" ng-class="{'editColor': bill.dueColor}" class="due"><span class="show-768px">{{bill.due | date: 'MM/dd/yy'}}</span><span class="hide-768px">{{bill.due | date: 'mediumDate'}}</span></label>
                     <datepicker>
                         <div class="input-group">
-                            <input ng-show="editDue" ng-model="bill.due; date" ng-blur="editDue = false" class="due" type="text"/>
+                            <input ng-show="editDue" ng-model="bill.due" ng-blur="editDue = false" class="due" type="text"/>
                         </div>
                     </datepicker>
             </div>           
             <div class="actions">                    
                 <a href="" ng-click="saveBill(bill); bill.nameColor=false; bill.amountColor=false; bill.dueColor=false">Save</a>
-                <a href="" ng-click="bill.payed = !bill.payed" ng-class="{ 'payed': bill.payed }">Pay</a>
+                <a href="" ng-click="bill.payed = !bill.payed; resetTodoState(bill)" ng-class="{ 'payed': bill.payed }">Pay</a>
                 <a href="" ng-click="deleteBill(bill, $index)">Delete</a>
             </div>
         </div>
-        <!-- {{bills}} -->
     </div>
